objects/slackv2__Slack_Auth__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Is_Most_Recent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slackv2__Object_Search_Url_Expiration_Date_Time__c</fullName>
        <label>Object Search Url Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>slackv2__Object_Search_Url__c</fullName>
        <label>Object Search Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Slack_User_Id__c</fullName>
        <label>Slack User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Slack_Auths</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Workspace_Id__c</fullName>
        <label>Workspace Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Workspace__c</fullName>
        <label>Workspace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>